*Empty MediaWiki Message*

--- a/Карпатьскороусьскъ_ѩꙁꙑкъ.mw
+++ b/Карпатьскороусьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Карпатьско-рѹсьскъ ѩзыкъ''' (карпатьско-рѹсьскы: ''Руськый/Русинськый язык (бесіда)'') въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ь ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], от ѥго же [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]], [[рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Глаголѭщь людии же с҄имь ѩзыкомь  60 тысѧщь сѫтъ. Мъноѕи дїалекти ѹ ѥго сѫтъ. Словѣньскы назъванъ «карпатьско-рѹськъ» да бѣжали бѫ о съмѣшени съ рѹсьскымъ ѩзыкомъ.
+'''Карпатьско-рѹсьскъ ѩзыкъ''' (карпатьско-рѹсьскы: ''Руськый/Русинськый язык (бесіда)'') въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ь ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]] ѥсть, о ѥго же [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]], [[рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци изишьли сѫтъ. Глаголѭщь людии же с҄имь ѩзыкомь  60 тысѧщь сѫтъ. Мъноѕи дїалекти ѹ ѥго сѫтъ. Словѣньскы назъванъ «карпатьско-рѹськъ» да бѣжали бѫ о съмѣшени съ рѹсьскымъ ѩзыкомъ.
 == Карпатьско-рѹсьска азъбѹкы  ==
 Бѹкъвъ рѧдъ данъ съгласьно съ ѹкраиньскыімъ изводомъ карпатьско-рѹськаѥго ѩзыка.
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
