--- a/Карпатьскороусьскъ_ѩꙁꙑкъ.mw
+++ b/Карпатьскороусьскъ_ѩꙁꙑкъ.mw
@@ -1,6 +1,6 @@
-'''Карпатьско-рѹсьскъ ѩзыкъ''' (карпатьско-рѹсьскы: ''Руськый/Русинськый язык (бесіда)'') въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ь ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]] ѥсть, о ѥго же [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]], [[рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци изишьли сѫтъ. Глаголѭщь людии же с҄имь ѩзыкомь  60 тысѧщь сѫтъ. Мъноѕи дїалекти ѹ ѥго сѫтъ. Словѣньскы назъванъ «карпатьско-рѹськъ» да бѣжали бѫ о съмѣшени съ рѹсьскымъ ѩзыкомъ.
+'''Карпатьско-рѹсьскъ ѩзыкъ''' (карпатьско-рѹсьскы: ''Руськый/Русинськый язык (бесіда)'') въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ь ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]] ѥсть, о ѥго же [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]], [[рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци изишьли сѫтъ. Глаголѭщь людии же с҄имь ѩзыкомь  60 тысѧщь сѫтъ. Мъноѕи дїалекти ѹ ѥго сѫтъ. Словѣньскы назъванъ «карпатьско-рѹськъ» ѥстъ да бѣжали бѫ о съмѣшени съ [[рѹсьскъ ѩзыкъ|рѹсьскомь ѩзыкомь]].
 == Карпатьско-рѹсьска азъбѹкы  ==
-Бѹкъвъ рѧдъ данъ съгласьно съ ѹкраиньскыімъ изводомъ карпатьско-рѹськаѥго ѩзыка.
+Бѹкъвъ рѧдъ данъ съгласьно съ карпатьско-рѹсьскаѥго ѩзыка ѹкраиньскомь изводомь ѥстъ.
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
 Аа Бб Вв Гг Дд Ее Єє Ёё Жж Зз Ии Ii Ыы Йй Її Кк Лл Мм Нн Оо Пп Рр Сс ТтУу Фф Хх Цц Чч Шш Щщ (Ѣѣ)<ref name="">Бѹкы азъбѹкѭ по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] нѣстъ</ref> Чч Юю Яя Ьь Ъъ
 </div>
