--- a/Оукраиньскъ_ѩꙁꙑкъ.mw
+++ b/Оукраиньскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Ѹкраиньскъ ѩзыкъ''' (ѹкраиньскы: ''українська мова'')  въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ь ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], от ѥго же [[Рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Ѹкраиньскъ ѩзыкъ ѥстъ дрьжавьнъ ѩзыкъ [[Ѹкраина|Ѹкраины]].
+'''Ѹкраиньскъ ѩзыкъ''' (ѹкраиньскы: ''українська мова'')  въсточьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥсть. Сыновл҄ии ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], отъ ѥго же [[Рѹсьскъ ѩзыкъ|рѹсьскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Ѹкраиньскъ ѩзыкъ ѥстъ дрьжавьнъ ѩзыкъ [[Ѹкраина|Ѹкраины]].
 == Ѹкраиньска азъбѹкы  ==
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
 Аа Бб Вв Гг Ґґ Дд Ее Єє Жж Зз Ии Іі Її Йй Кк Лл Мм Нн Оо Пп Рр Сс Тт Уу Фф Хх Цц Чч Шш Щщ Ьь Юю Яя '
