нынѣ и азъ блазны исправлти почѧлъ ѥсмь

--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Gruppy dialektov.png|thumb|Дїалектъ харта]]
-'''Їллѷрїиско-словѣньскъ ѩзыкъ''' (їллѷрїиско-словѣньскы: ''slovenski jezik, slovenščina'') южьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥстъ . [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] дрьжавьнъ ѩзыкъ ѥстъ.  Симь ѩзыкомь такождє въ [[Италї|Италїѩ]], [[Аѵстрї|Аѵстрїѩ]] и [[Хръватьска|Хръватьске]] глаголѭтъ. Людии глаголѭщь карпатьско-словѣньскы 2,2 леѡдръ сѫтъ. Мъноѕи дїалекти ѹ ѥго сѫтъ, без мала комьжьдо селѣ свои ѩзыкъ ѥстъ. Словѣньскы назъванъ «їллѷрїиско-словѣньскъ» да бѣжали бѫ о съмѣшени съ [[словѣньскъ ѩзыкъ|словѣньскомь]] ѩзыкомь и [[Карпатьско-словѣньскъ ѩзыкъ|Карпатьско-словѣньскыимъ]] ѩзыкомъ.
+'''Їллѷрїиско-словѣньскъ ѩзыкъ''' (їллѷрїиско-словѣньскы: ''slovenski jezik, slovenščina'') южьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥстъ. [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] дрьжавьнъ ѩзыкъ ѥстъ.  Симь ѩзыкомь такожде [[Италї|Италїи]], [[Аѵстрї|Аѵстрїи]] и [[Хръватьска|Хръватьсцѣ]] глаголѭтъ. Людии глаголѭщь карпатьско-словѣньскы 2,2 леѡдръ сѫтъ. Мъноѕи дїалекти ѹ ѥго сѫтъ, без мала комьжьдо селѣ свои ѩзыкъ ѥстъ. Словѣньскы назъванъ «їллѷрїиско-словѣньскъ» да бѣжали бѫ о съмѣшени съ [[словѣньскъ ѩзыкъ|словѣньскомь]] ѩзыкомь и [[Карпатьско-словѣньскъ ѩзыкъ|Карпатьско-словѣньскыимъ]] ѩзыкомъ.
 
 Извѣстьнъ сь ѩзыкъ ѕѣло своими особостьми грамматїцѣ и фѡнитїцѣ ѥстъ. Грамматїцѣ главьна ѥстъ чь [[двоина]] въ нѥмь се съхрани, коже ѥдьномь тъкъмо [[врьхѹлѹжичьскъ ѩзыкъ|врьхѹлѹжичьсцѣ ѩзыцѣ]] посрѣдѣ вьс҄ѣхъ словѣньскыихъ.
 
@@ -13,8 +13,8 @@
 [[Климентовица|Климентовицѫ]] бо [[Словѣне (Їллѷрїисци)|Їллѷрїисции Словѣне]] забыли, латиньскы же бѹкъви хѹдо присъпособили сѫтъ, нынѣ различи писмѣ междѹ '''е''', '''ѣ''' и '''ъ''' (вьс҄и триѥ латиньскоѭ бѹкъвиѭ '''e''' сѧ пишѫтъ), коже и междѹ '''о''' и '''ѫ''' (лат. '''o''') нѣстъ.
 
 == Їллѷрїиско-словѣньска азбѹкы ==
-[[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбѹкы пьсана разномъ бѹквиемъ (Times New Roman, Arial, Lucida Console и Monotype Corsiva)]]
-Въ Їллѷрїиско-словѣньскы азбѹкы 25 бѹкъвъ и 3 дїграѳъ сѫть.
+[[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбѹкы пьсана разномь бѹквиѥмь (Times New Roman, Arial, Lucida Console и Monotype Corsiva)]]
+Їллѷрїиско-словѣньскѣ азбѹце 25 бѹкъвъ и 3 дїграѳи сѫть.
 {| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
 |-----
 ! Бѹкы !! звѫкъ
