Градоглавы имѧ допьсахъ.

--- a/Москъва.mw
+++ b/Москъва.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag of Moscow (Russia).png|100 px]]
 | знакъ = [[Видъ:Coat of Arms of Moscow.png|80 px]]
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
-| Глава = 
+| Глава = Юрии Лѫжьковъ
 | Людии = 10.472.629 
 | Основанъ = 1147
 | map = [[Видъ:Moscow In Europe.png|200 px]]
