*Empty MediaWiki Message*

--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -14,7 +14,7 @@
 
 == Їллѷрїиско-словѣньска азбѹкы ==
 [[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбѹкы пьсана разномь бѹквиѥмь (Times New Roman, Arial, Lucida Console и Monotype Corsiva)]]
-Їллѷрїиско-словѣньскѣ азбѹце 25 бѹкъвъ и 3 дїграѳи сѫть.
+Їллѷрїиско-словѣньскѣ азбѹкъве 25 бѹкъвъ и 3 дїграѳи сѫть.
 {| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
 |-----
 ! Бѹкы !! звѫкъ
