--- a/Рѣꙁан҄ь.mw
+++ b/Рѣꙁан҄ь.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Рѧзань
-| знамѧ= [[Видъ:Flag_of_Ryazan_(Ryazan_oblast).png|150px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Ryazan_small.png|100px]]
+| знамѧ= Flag_of_Ryazan_(Ryazan_oblast).png
+| знакъ = Coat_of_Arms_of_Ryazan_small.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 515,9 тысѧщь
