--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Загребъ
-| знамѧ= [[Видъ:Zagreb zastava.gif|100 px]]
-| знакъ = [[Видъ:Zagreb coa.gif|80 px]]
+| знамѧ= Zagreb zastava.gif
+| знакъ = Zagreb coa.gif
 | Дрьжава = Хръватьска
 | Глава = Миланъ Бандищь
 | Людии = 779145
