--- a/Вьсєволожьскъ.mw
+++ b/Вьсєволожьскъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Вьсеволожьскъ
-| знамѧ= [[Видъ:Flag of Leningrad Oblast.svg|100 px]]
-| знакъ = [[Видъ:Coat of Arms of Vsevolozhsk (Leningrad oblast).png|80 px]]
+| знамѧ= 
+| знакъ = Coat of Arms of Vsevolozhsk (Leningrad oblast).png
 | Дрьжава = Рѡсї
 | Глава = 
 | Людии = 45 тысѫщь
