--- a/Каꙁанъ.mw
+++ b/Каꙁанъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Казань
-| знамѧ= [[Видъ:Zilant.GIF|100 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Kazan_(Tatarstan)_(2004).png|80 px]]
+| знамѧ= Zilant.GIF
+| знакъ = Coat_of_Arms_of_Kazan_(Tatarstan)_(2004).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1110 тысѧщь
