--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Санкт-Петербѹргъ
-| знамѧ= [[Видъ:Flag of St Petersburg (Russia).png|100 px]]
-| знакъ = [[Видъ:Coat of Arms of Saint Petersburg large (2003).png|100px]]
+| знамѧ= Flag of St Petersburg (Russia).png
+| знакъ = Coat of Arms of Saint Petersburg large (2003).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 4500 тысѫщь
