--- a/Ѳєссалонїка.mw
+++ b/Ѳєссалонїка.mw
@@ -1,5 +1,5 @@
 {{Градъ|name = Ѳессалонїка
-| знамѧ= [[Видъ:Thessaloniki Municipal Flag.png|100 px]]
+| знамѧ= Thessaloniki Municipal Flag.png
 | знакъ = 
 | Дрьжава = Грьци
 | Глава = 
