--- a/Ѳєссалонїка.mw
+++ b/Ѳєссалонїка.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | map = [[Видъ:Thessaloniki.png|200 px]]
 |}}
-'''Ѳессалонка''', (древльнѥсловѣньскы ''Солѹнь'' или ''Селѹнь''. [[Грьчьскъ ѩзыкъ|грьчьскы]]: Θεσσαλονίκη), [[Грьци|Грьцѣхъ]] ([[Македонї]]) градъ ѥстъ, иде црькы христианьска была бѣ, ѥиже апостолъ [[Паѵлъ апостолъ|Паѵлъ]] посъланиѥ писа. И Ѳессалонїкы свѧта братри, [[Кѵрїллъ]] и [[Меѳодiи]] ѥсте, же [[Словѣньска азъбѹкы|Азъбѹкъвь]] словѣномъ измыслисте и хрїстїаньскы кънигы на [[Словѣньскъ ѩзыкъ|словѣньскыи ѩзыкъ]] прѣложисте.
+'''Ѳессалонка''', (древльнѥсловѣньскы ''Солѹнь'' или ''Селѹнь''. [[Грьчьскъ ѩзыкъ|грьчьскы]]: Θεσσαλονίκη), [[Грьци|Грьцѣхъ]] ([[Македонї]]) градъ ѥстъ, иде црькы христианьска была бѣ, ѥиже апостолъ [[Паѵлъ апостолъ|Паѵлъ]] посъланиѥ писа. И Ѳессалонїкы свѧта братри, [[Кѷрїллъ]] и [[Меѳодiи]] ѥсте, же [[Словѣньска азъбѹкы|Азъбѹкъвь]] словѣномъ измыслисте и хрїстїаньскы кънигы на [[Словѣньскъ ѩзыкъ|словѣньскыи ѩзыкъ]] прѣложисте.
 [[Image:Salonica White Tower.jpg|thumb|right|250px|Бѣла Вѣжа Ѳессалонїцѣ, града сѷмволъ]]
 [[Катигорї:All orphaned pages]]
 [[Катигорї:Гради]]
