*Empty MediaWiki Message*

--- a/Кꙑѥвъ.mw
+++ b/Кꙑѥвъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Кыѥвъ
-| знамѧ= [[Видъ:Kyiv flag.png|100 px]]
-| знакъ = [[Видъ:Kiew-city-COA.PNG|80 px]]
+| знамѧ= Kyiv flag.png
+| знакъ = Kiew-city-COA.PNG
 | Дрьжава = Ѹкраина
 | Глава = 
 | Людии = 
