--- a/Новъ_Градъ.mw
+++ b/Новъ_Градъ.mw
@@ -1,16 +1,15 @@
 {{Градъ|name = Новъ Градъ
-| знамѧ= [[Видъ:Flag of Veliky Novgorod.png|100 px]]
-| знакъ = [[Видъ:Coat of Arms of Veliky Novgorod.png|80 px]]
-| Дрьжава = Рѡсї
+| знамѧ= Flag of Veliky Novgorod.png
+| знакъ = Coat of Arms of Veliky Novgorod.png
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии =
 | Основанъ = 
 | map = 
 |}}
-
-
+[[Image:Cathedral of St. Sophia, the Holy Wisdom of God in Novgorod, Russia.jpg|thumb|left|Свѧтыѩ Божѧѩ Софїѩ (Мѫдрости) Новѣ Градѣ съборьна црькы]]
 '''Новъ Градъ''' ({{Lang-ru|Новгород}}, епїсимьно наречениѥ '''Великыи Новъ Градъ''', рѹсьскы ''Великий Новгород'') [[Рѡсї|Рѡсїи]] [[Волховъ|Волховѣ]] рѣцѣ стоитъ.
-[[Image:Cathedral of St. Sophia, the Holy Wisdom of God in Novgorod, Russia.jpg|thumb|right|Свѧтыѩ Божѧѩ Софїѩ (Мѫдрости) Новѣ Градѣ съборьна црькы]]
+
 [[Category:Новъ Градъ]]
 
 [[cs:Novgorod]]
