--- a/Москъва.mw
+++ b/Москъва.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Москъва
-| знамѧ= [[Видъ:Flag of Moscow (Russia).png|100 px]]
-| знакъ = [[Видъ:Coat of Arms of Moscow.png|80 px]]
+| знамѧ= Flag of Moscow (Russia).png
+| знакъ = Coat of Arms of Moscow.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = Юрии Лѫжьковъ
 | Людии = 10.472.629 
