--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -1,5 +1,5 @@
 {{Градъ|name = Съкопиѥ
-| знамѧ= [[Видъ:ZNAME Skopje.jpg|50 px]]
+| знамѧ= ZNAME Skopje.jpg
 | знакъ = 
 | Дрьжава = Македонї
 | Глава = 
