--- a/Римъ.mw
+++ b/Римъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Римъ
-| знамѧ= [[Видъ:Flag of Rome.svg|100 px]]
-| знакъ = [[Видъ:Roma-Stemma.png|80 px]]
+| знамѧ= Flag of Rome.svg
+| знакъ = Roma-Stemma.png
 | Дрьжава = Италї
 | Глава = 
 | Людии =  
