--- a/Бѣлъ_Градъ_·_Срьбїи.mw
+++ b/Бѣлъ_Градъ_·_Срьбїи.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Бѣлъ Градъ
-| знамѧ= [[Видъ:Flag of Belgrade.png|100 px]]
-| знакъ = [[Видъ:Small Coat of Arms Belgrade.svg|80 px]]
+| знамѧ= Flag of Belgrade.png
+| знакъ = Small Coat of Arms Belgrade.svg
 | Дрьжава = Срьбїıа
 | Глава = 
 | Людии =  1 795 124 
