--- a/Оужицє.mw
+++ b/Оужицє.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Ѹжице
 | знамѧ = 
-| знакъ = [[Видъ:Uzice.jpg|80 px]]
+| знакъ = Uzice.jpg
 | Дрьжава = Срьбїıа
 | Глава = Тихомир Петковић
 | Людии = 54,717
