--- a/Новосибирьскъ.mw
+++ b/Новосибирьскъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name =  Новосибирьскъ
-| знамѧ= [[Видъ:Novosibirsk-city flag.svg|100 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Novosibirsk_(2004).png |80 px]]
+| знамѧ= Novosibirsk-city flag.svg
+| знакъ = Coat_of_Arms_of_Novosibirsk_(2004).png
 | Дрьжава = Рѡсї
 | Глава = 
 | Людии = 
