--- a/Софїꙗ.mw
+++ b/Софїꙗ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Софї
-| знамѧ= [[Видъ:BG Sofia flag.svg|100 px]]
-| знакъ = [[Видъ:BG Sofia coa.svg|80 px]]
+| знамѧ= BG Sofia flag.svg
+| знакъ = BG Sofia coa.svg
 | Дрьжава = Блъгарї
 | Глава = 
 | Людии = 
