--- a/Вльгоградъ.mw
+++ b/Вльгоградъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Вльгоградъ
-| знамѧ= [[Видъ:Volgograd flag.gif|100 px]]
-| знакъ = [[Видъ:Coat of Arms of Volgograd.png|80 px]]
+| знамѧ= Volgograd flag.gif
+| знакъ = Coat of Arms of Volgograd.png
 | Дрьжава = Рѡсї
 | Глава = 
 | Людии = 
