--- a/Люблꙗна.mw
+++ b/Люблꙗна.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Люблна
 | знамѧ= 
-| знакъ = [[Видъ:Знакъ Люблньскъ.png|80 px]]
+| знакъ = Знакъ Люблньскъ.png
 | Дрьжава = Їллѷрїиска Словѣнї
 | Глава = 
 | Людии = 
