--- a/Єкатєрїнбоургъ.mw
+++ b/Єкатєрїнбоургъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name =Екатерїнбѹргъ
 | знамѧ= 
-| знакъ = [[Видъ:Coat_of_Arms_of_Yekaterinburg_(Sverdlovsk_oblast)_(1998).png|80 px]]
+| знакъ = Coat_of_Arms_of_Yekaterinburg_(Sverdlovsk_oblast)_(1998).png
 | Дрьжава = Рѡсї
 | Глава = 
 | Людии = 1337 тысѫщь
