*Empty MediaWiki Message*

--- a/Растовъ_на_Донѣ.mw
+++ b/Растовъ_на_Донѣ.mw
@@ -1,6 +1,6 @@
 {{Градъ|name = Растовъ на Донѣ
 | знамѧ= 
-| знакъ = [[Видъ:Coat_of_Arms_of_Rostov-na-Donu.png|80 px]]
+| знакъ = Coat_of_Arms_of_Rostov-na-Donu.png
 | Дрьжава = Рѡсї
 | Глава = 
 | Людии = 1058 тысѫщь
