--- a/Растовъ_на_Донѣ.mw
+++ b/Растовъ_на_Донѣ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Растовъ на Донѣ
+{{Градъ|Имѧ = Растовъ на Донѣ
 | знамѧ= 
 | знакъ = Coat_of_Arms_of_Rostov-na-Donu.png
 | Дрьжава = Рѡсї
 | Глава = 
 | Людии = 1058 тысѫщь
 | Основанъ = 1749
-| map = 
+| Харта = 
 |}}
 [[Видъ:Coat_of_Arms_of_Rostov-na-Donu_(1811).png|right|thumb|100px|Растова на Донѣ давьн҄ь знакъ]]
 '''Растовъ на Донѣ''' ({{Lang-ru|Ростов-на-Дону}}) [[Рѡсї|Рѡсїѩ]] [[Растовска область|Растовьскы области]] главьнъ градъ ѥстъ, иже построѥнъ рѣцѣ [[Донхъ|Донѣ]] ѥстъ. Основанъ лѣта 1749, нареченъ градъ съ лѣта 1807 ѥстъ. Людии обитаѥтъ 1058 тысѫщь.
