--- a/Томьскъ.mw
+++ b/Томьскъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name =  Томьскъ
-| знамѧ= [[Видъ:Tomsk city flag.png|100 px]]
-| знакъ = [[Видъ:Tomsk_city_coat_of_arms.png |80 px]]
+{{Градъ|Имѧ =  Томьскъ
+| знамѧ= Tomsk city flag.png
+| знакъ = Tomsk_city_coat_of_arms.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 512 600 ([[2005]])
 | Основанъ = [[1604]]
-| map = [[Видъ:RussiaTomsk-Location2007-01.png|200 px]]
+| Харта = [[Видъ:RussiaTomsk-Location2007-01.png|200 px]]
 }}
 
 [[Видъ:TSU-2004-19924.jpg|thumb|200px|left|Томьскъ]]
