--- a/Варна.mw
+++ b/Варна.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Варна
+{{Градъ|Имѧ = Варна
 | знамѧ= 
-| знакъ = [[Видъ:Varna COA.jpg|80 px]]
+| знакъ = Varna COA.jpg
 | Дрьжава = Блъгарї
 | Глава = 
 | Людии =  400 тысѧщь
 | Основанъ = 
-| map = [[Видъ:Varna location in Bulgaria.png|200 px]]
+| Харта = [[Видъ:Varna location in Bulgaria.png|200 px]]
 |}}
 '''Варна''' ѥстъ градъ [[Блъгарї|Блъгарїѩ]].  Варненскы краѩ главьнъ градъ ѥстъ. Людии обитаѥтъ 400 тысѫщь.
 
