--- a/Стара_Ꙁагора.mw
+++ b/Стара_Ꙁагора.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Стара Загора
-| знамѧ= [[Видъ:STZflag.gif|120px]]
-| знакъ = [[Видъ:Stara-Zagora-coat-of-arms.svg|80 px]]
+{{Градъ|Имѧ = Стара Загора
+| знамѧ= STZflag.gif
+| знакъ = Stara-Zagora-coat-of-arms.svg
 | Дрьжава = Блъгарї
 | Глава = Еѵгенїи Желевъ
 | Людии = 160 тысѫщь
 | Основанъ = ~6 тысѫщь лѣта до РХ
-| map = [[Видъ:Stara Zagora location in Bulgaria.png|200 px]]
+| Харта = [[Видъ:Stara Zagora location in Bulgaria.png|200 px]]
 }}
 '''Стара Загора''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 160 тысѫщь. Стара Загора ѥстъ главьнъ градъ [[Старозагорьска область|Старозагорьскы  области]]. 
 [[Катигорї:Гради]]
