--- a/Коуровъ.mw
+++ b/Коуровъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Кѹровъ
+{{Градъ|Имѧ = Кѹровъ
 | знамѧ= 
-| знакъ = [[Видъ:POL Kurów COA.svg|80 px]]
+| знакъ = POL Kurów COA.svg
 | Дрьжава = Пол̑ьска
 | Глава = 
 | Людии = 2782
 | Основанъ = 
-| map = [[Image:KurówPoland.png|200 px|]]
+| Харта = [[Image:KurówPoland.png|200 px|]]
 |}}
 
 '''Кѹровъ''' ({{Lang-pl|Kurów}}) - село [[Пол̑ьска|Пол̑ьскы]]. Въ Кѹровѣ людии обитаѥтъ 2 782.
