--- a/Бєрлинъ.mw
+++ b/Бєрлинъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Берлинъ
-| знамѧ= [[Видъ:Flag of Berlin.svg|100 px]]
-| знакъ = [[Видъ:Coat of arms of Berlin.svg|80 px]]
+{{Градъ|Имѧ = Берлинъ
+| знамѧ= Flag of Berlin.svg
+| знакъ = Coat of arms of Berlin.svg
 | Дрьжава = Нѣмьци
 | Глава = 
 | Людии = 3 405 000 
 | Основанъ = 
-| map = [[Видъ:Berlin.svg|200 px]]
+| Харта = [[Видъ:Berlin.svg|200 px]]
 |}}
 '''Берлинъ''' ([[Нѣмьчьскъ ѩзыкъ|нѣмьчьскы]] ''Berlin'') [[Нѣмьци|Нѣмьць]] [[стольнъ градъ]] ѥстъ.
 
