--- a/Вилн҄ь.mw
+++ b/Вилн҄ь.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Вилн҄ь
-| знамѧ= [[Видъ:Flag of Vilnius.svg|100 px]]
-| знакъ = [[Видъ:Grand_Coat_of_arms_of_Vilnius.png|80 px]]
+{{Градъ|Имѧ = Вилн҄ь
+| знамѧ= Flag of Vilnius.svg
+| знакъ = Grand_Coat_of_arms_of_Vilnius.png
 | Дрьжава = Литьва
 | Глава = 
 | Людии = 
 | Основанъ = 
-| map = 
+| Харта = 
 |}}
 
 '''Вилн҄ь''' ([[словѣньскъ ѩзыкъ|словѣньскы]] парадїгма ju, яко {{lang-lt|Vilnius}}, {{lang-be|Вільня, Вільнюс}}, {{lang-pl|Wilno}}), [[Литъва|Литъвы]] стольнъ градъ ѥстъ.
