*Empty MediaWiki Message*

--- a/Балашиха.mw
+++ b/Балашиха.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Балашиха
-| знамѧ= [[Видъ:Flag of Balashikha (Moscow oblast).png|100 px]]
-| знакъ = [[Видъ:Coat of Arms of Balashikha (Moscow oblast) (1999).png|80 px]]
-| Дрьжава = Рѡсї
+{{Градъ|Имѧ = Балашиха
+| знамѧ= Flag of Balashikha (Moscow oblast).png|100 px]]
+| знакъ = Coat of Arms of Balashikha (Moscow oblast) (1999).png
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 183 тысѫщѧ
 | Основанъ = 1830
-| map = 
+| Харта = 
 |}}
 '''Балашиха''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Балашиха'') [[Рѡсї|Рѡсїѩ]] [[Москъвьска область|Москъвьскы области]] [[Балашишьска чѧсть|Балашишьскы чѧсти]] главьнъ градъ ѥстъ. По Москъвѣ бол&#x0484;ии градъ Москъвьскы области ѥстъ. Основана лѣта 1830 ѥстъ, наречена градъ съ лѣта 1939 ѥстъ. Построѥна рѣцѣ [[Пѣхъра|Пѣхърѣ]] ѥстъ, людии обитаѥтъ 183 тысѫщѧ.
 
