--- a/Братислава.mw
+++ b/Братислава.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Братислава
-| знамѧ= [[Видъ:Flag of Bratislava.svg|100 px]]
-| знакъ = [[Видъ:Bratislava erb.jpg|80 px]]
+{{Градъ|Имѧ = Братислава
+| знамѧ= Flag of Bratislava.svg
+| знакъ = 
 | Дрьжава = Словѣньско
 | Глава = 
 | Людии = 425 тысѫщь
 | Основанъ = 970
-| map = [[Видъ:Map slovakia bratislava.png|200 px]]
+| Харта = [[Видъ:Map slovakia bratislava.png|200 px]]
 |}}
 '''Братислава''' ([[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскы]] ''Bratislava'') [[Словѣньско|Словѣньска]] стольнъ градъ ѥстъ. Построѥнъ ѥстъ рѣцѣ [[Дѹнавъ|Дѹнавѣ]], людии обитаѥтъ 425 тысѫщь. Помѣновена запрьва лѣтописи лѣта 970 ѥстъ.
 
