--- a/Парижь.mw
+++ b/Парижь.mw
@@ -1,13 +1,13 @@
-{{Градъ|name = Парижь
-| знамѧ= [[Видъ:Flag of Paris.svg|100 px]]
-| знакъ = [[Видъ:Blason paris.png|80 px]]
+{{Градъ|Имѧ = Парижь
+| знамѧ= Flag of Paris.svg
+| знакъ = Blason paris.png
 | Дрьжава = Франкї
 | Глава = 
 | Людии = 2200 тысѫщь
 | Основанъ = 
-| map = 
+| Харта = 
 |}}
-'''Пари́жь''' (как дрѹгъ образъ: Парсїѥ, по [[грьчьскъ ѩзыкъ|грьчьскѹ]] ѩзыкѹ. [[Франкїиськъ ѩзыкъ|франкїиськы]] ''Paris'') [[Франкї|Франкїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 2200 тысѫщь. Построѥнъ рѣцѣ [[Сикѹана]].
+'''Пари́жь''' (как дрѹгъ образъ: Парсїѥ, по [[грьчьскъ ѩзыкъ|грьчьскѹ]] ѩзыкѹ. [[Франкїискъ ѩзыкъ|франкїиськы]] ''Paris'') [[Франкї|Франкїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 2200 тысѫщь. Построѥнъ рѣцѣ [[Сикѹана]].
 
 ----
 
