--- a/Прага.mw
+++ b/Прага.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Прага
-| знамѧ= [[Видъ:Flag of Prague.svg|100 px]]
-| знакъ = [[Видъ:Praha CoA CZ.svg|80 px]]
+{{Градъ|Имѧ = Прага
+| знамѧ= Flag of Prague.svg
+| знакъ = [Praha CoA CZ.svg
 | Дрьжава = Чешьско
 | Глава = 
 | Людии = тысѫщѧ
 | Основанъ = 940-950
-| map = 
+| Харта = 
 |}}
 '''Прага''' ({{Lang-cs|Praha}}) стольнъ градъ [[Чешьско|Чешьска]] ѥстъ. Людии обитаѥтъ 1184 тысѫщѧ. Построѥна ѥстъ рѣцѣ [[Влътава|Влътавѣ]]. Прага намѣнѥна запрьва лѣтописи  вѣка ѥстъ, междѹ лѣты 940 и 950.
 
