--- a/Сосновꙑи_Боръ.mw
+++ b/Сосновꙑи_Боръ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Сосньнъ Боръ
-| знамѧ= [[Видъ:Flag of Leningrad Oblast.svg|100 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Sosnovy_Bor_(Leningrad_oblast).png|80 px]]
+{{Градъ|Имѧ = Сосньнъ Боръ
+| знамѧ= 
+| знакъ = Coat_of_Arms_of_Sosnovy_Bor_(Leningrad_oblast).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 67 тысѫщь
 | Основанъ = 1958
-| map = 
+| Харта = 
 |}}
 '''Сосньнъ Боръ''' ({{Lang-ru|Сосновый Бор}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы]] области [[Сосньноборьска чѧсть|Сосньноборьскы]] чѧсти главьнъ градъ ѥстъ. Построѥнъ ѥстъ рѣкахъ [[Ковашь]] и [[Глѹховъка]], людии обитаѥтъ 67 тысѭщь. Основанъ ѥстъ лѣта 1958, нареченъ градъ 1973 ѥстъ.
 
