--- a/Вꙑборгъ.mw
+++ b/Вꙑборгъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Выборгъ
-| знамѧ= [[Видъ:Flag_of_Vyborg_(Leningrad_oblast).png|100 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Vyborg_(Leningrad_oblast).png|80 px]]
-| Дрьжава = Рѡсї
+{{Градъ|Имѧ = Выборгъ
+| знамѧ= Flag_of_Vyborg_(Leningrad_oblast).png
+| знакъ = Coat_of_Arms_of_Vyborg_(Leningrad_oblast).png
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии =  78 тысѫщь
 | Основанъ = 
-| map =
+| Харта =
 }}
 '''Выборг''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Выборг'', [[Свеньскъ ѩзыкъ|свеньскы]] ''Viborg'', [[Сѹмьскъ ѩзыкъ|сѹмьскы]] ''Viipuri'') [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Выборжьска чѧсть|Выборжьски чѧсти]] главьнъ градъ ѥстъ. Людии обитаѥтъ 78 тысѫщь.
 
