*Empty MediaWiki Message*

--- a/Гатчина.mw
+++ b/Гатчина.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Гатчина
+{{Градъ|Имѧ = Гатчина
 | знамѧ= 
-| знакъ = [[Видъ:Coat of Arms of Gatchina (Leningrad oblast).png|80 px]]
-| Дрьжава = Рѡсї
+| знакъ = Coat of Arms of Gatchina (Leningrad oblast).png
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 89 тысѧщь
 | Основанъ = 1499
-| map = 
+| Харта = 
 |}}
 '''Гатчина''' ({{Lang-ru|Гатчина}}) [[Рѡсї|Рѡсїѩ]] [[Ленинградська область|Лениноградьскы области]] [[Гатчинська чѧсть|Гатчинськы чѧсти]] главьнъ градъ ѥстъ, ѥзера [[Бѣло (ѥзеро)|Бѣла]] брѣѕѣ лежитъ. Людии обитаѥтъ 89 тысѫщь. Основана лѣта 1499 ѥстъ, наречена градъ съ лѣта 1796 ѥстъ. Дьньсь наиболии градъ [[Лениноградьска область|Лениноградьскы]] области ѥстъ.
 
