--- a/Подълѣсьскъ_Мєждоурѣчь.mw
+++ b/Подълѣсьскъ_Мєждоурѣчь.mw
@@ -1,13 +1,13 @@
-{{Градъ|name = Подълѣсьскъ Мѧѕирьць
-| знамѧ= [[Видъ:POL Międzyrzec Podlaski flaga.svg|100 px]]
-| знакъ = [[Видъ:POL Międzyrzec Podlaski COA.svg|80 px]]
+{{Градъ|Имѧ = Подълѣсьскъ Мѧѕирьць
+| знамѧ= POL Międzyrzec Podlaski flaga.svg
+| знакъ = POL Międzyrzec Podlaski COA.svg
 | Дрьжава = Пол̑ьска
 | Глава = 
 | Людии = 17 300
 | Основанъ = 
-| map = [[Видъ:PL Międzyrzec Podlaski map.svg|200 px]]
+| Харта = [[Видъ:PL Międzyrzec Podlaski map.svg|200 px]]
 }}
-'''Подълѣсьскъ Мѧѕирьць''' ([[пол̑ьскъ ѩзыкъ|пол̑ьскы]]: ''Międzyrzec Podlaski'') [[Пол̑ьска|Пол̑ьскы]] въстока [[градъ]] ѥстъ.
+'''Подълѣсьскъ Мѧѕирьць''' ({{lang-pl|Międzyrzec Podlaski}}) [[Пол̑ьска|Пол̑ьскы]] въстока [[градъ]] ѥстъ.
 
 [[Category:Гради]]
 [[Category:Пол̑ьска]]
