--- a/Коломьна.mw
+++ b/Коломьна.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Коломьна
+{{Градъ|Имѧ = Коломьна
 | знамѧ= 
-| знакъ = [[Видъ:Coat of Arms of Kolomna (Moscow oblast).png|80 px]]
-| Дрьжава = Рѡсї
+| знакъ = Coat of Arms of Kolomna (Moscow oblast).png
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии =  148 тысѧщь
 | Основанъ = 1177
-| map =
+| Харта =
 |}}
 '''Коломьна''' ({{Lang-ru|Коломна}}, ѥже сѧ словѣньскы нарицаѥтъ «окрьстьнѥсть») [[Рѡсї|Рѡсїѩ]], [[Москъвьска область|Москъвьскы области]] градъ ѥстъ. Людии обитаѥтъ 148 тысѧщь. Помѣновена запрьва [[Лаврентїѥвьска лѣтопись|Лаврентїѥвьскы]] лѣтописи лѣта 1177 ѥстъ. Построѥна ѥстъ [[Ока (рѣка)|Окы]] и [[Москъва (рѣка)|Москъвы]] сълинии рѣкъ.
 
