*Empty MediaWiki Message*

--- a/Подъгорица.mw
+++ b/Подъгорица.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Подъгорица
-| знамѧ= [[Видъ:Flag of Podgorica.svg|100 px]]
-| знакъ = [[Видъ:NewCoatPG1.jpg|80 px]]
+{{Градъ|Имѧ = Подъгорица
+| знамѧ= Flag of Podgorica.svg
+| знакъ = NewCoatPG1.jpg
 | Дрьжава = Чрьна Гора
 | Глава = 
 | Людии = 169132
 | Основанъ = 
-| map = [[Видъ:Podgorica-Position.PNG|200 px]]
+| Харта = [[Видъ:Podgorica-Position.PNG|200 px]]
 |}}
 '''Подъгорица''' ([[Срьбьскъ ѩзыкъ|срьбьски]] ''Подгорица/Podgorica'') [[Чрьна Гора|Чрны Горы]] стольнъ градъ ѥсть. Построѥна рѣцѣ [[Морача|Морачи]] ѥсть. Людии обитаѥтъ 169 132. Сѥго града имени Рыбьница и Тїтоградъ бѣашете. Подъгорица стала ѥстъ пакы стольнъ градъ послѣди їѹнї 2006 годѣ, стольнъ градъ Чрьны Горы [[Цетиниѥ]] бѣаше.
 
