*Empty MediaWiki Message*

--- a/Омьскъ.mw
+++ b/Омьскъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Омьскъ
-| знамѧ= [[Видъ:Flag_of_Omsk.png|100 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Omsk.png|80 px]]
+{{Градъ|Имѧ = Омьскъ
+| знамѧ= Flag_of_Omsk.png
+| знакъ = Coat_of_Arms_of_Omsk.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии =  1129 тысѫщь
 | Основанъ = 1716
-| map =
+| Харта =
 }}
 '''Омьскъ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] Омск) [[Рѡсї|Рѡсїѩ]] [[Омьска область|Омьскы области]] главьнъ градъ ѥстъ. Основанъ лѣта 1716, нареченъ градъ съ лѣта 1782 ѥсть. Людии обитаѥтъ 1129 тысѫщь. Омьскъ построѥнъ сълинии рѣкъ [[Їртышъ|Їртыша]] и [[Омь|Оми]] ѥстъ.
 Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
