*Empty MediaWiki Message*

--- a/Пєрмь.mw
+++ b/Пєрмь.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Пермь
-| знамѧ= [[Видъ:Flag_of_Perm.png|100 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Perm.png|80 px]]
-| Дрьжава = Рѡсї
+{{Градъ|Имѧ = Пермь
+| знамѧ= Flag_of_Perm.png
+| знакъ = Coat_of_Arms_of_Perm.png
+| Дрьжава =  {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 990 тысѫщь
 | Основанъ = 1723
-| map =
+| Харта =
 |}}
 '''Пермь''' [[Рѡсї|Рѡсїѩ]], [[Пермьскъ краи|Пермьскы]] кра главьнъ градъ ѥстъ. Основана лѣта 1723 ѥстъ, наречена градъ съ лѣта 1781 ѥстъ. Построѥна ѥстъ рѣцѣ [[Кама (рѣка)|Камѣ]], града имѧ ''Молотовъ'' бѣаше. Людии обитаѥтъ 990 тысѫщь.
 
