--- a/Нижьн҄ии_Новъ_Градъ.mw
+++ b/Нижьн҄ии_Новъ_Градъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Нижьн҄ии Новъ Градъ
-| знамѧ= [[Видъ:Flag Nizhny Novgorod.gif|100 px]]
-| знакъ = [[Видъ:Coat of arms Nizhny Novgorod.gif|80 px]]
+{{Градъ|Имѧ = Нижьн҄ии Новъ Градъ
+| знамѧ= Flag Nizhny Novgorod.gif
+| знакъ = Coat of arms Nizhny Novgorod.gif
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1284 тысѧщи
 | Основанъ = 1221
-| map = 
+| Харта = 
 |}}
 '''Нижьн҄ии Новъ Градъ''' градъ [[Рѡсї|Рѡсїѩ]] ѥстъ. Построѥнъ ѥсть рѣцѣ [[Вльга|Вльге]]. Людии обитаѥтъ 1284 тысѧщи. Нижьн҄ии Новъ Градъ основанъ ѥсть лѣта 1221. Града имѧ Горькїи бѣаше. 
 
