*Empty MediaWiki Message*

--- a/Самара.mw
+++ b/Самара.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Самара
+{{Градъ|Имѧ = Самара
 | знамѧ= [[Видъ:Flag_of_Samara_(Samara_oblast).png|100 px]]
 | знакъ = [[Видъ:Coat_of_Arms_of_Samara_(Samara_oblast).png|80 px]]
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1133 тысѫщи
 | Основанъ = 1586
-| map = 
+| Харта = 
 |}}
 '''Самара''' градъ [[Рѡсї|Рѡсїѩ]] ѥстъ. Самара построѥна рѣцѣ [[Вльга|Вльsе]] ѥстъ, срьдьце [[Самарьска область|Самарьскы области]] ѥстъ. Людии обитаѥтъ 1133 тысѧщи. Самара основана лѣта 1586, градъ съ лѣта 1780 ѥстъ. Имѧ Самары ''Куибышевъ'' бѣаше.
 <gallery>
