*Empty MediaWiki Message*

--- a/Самара.mw
+++ b/Самара.mw
@@ -1,6 +1,6 @@
 {{Градъ|Имѧ = Самара
-| знамѧ= [[Видъ:Flag_of_Samara_(Samara_oblast).png|100 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Samara_(Samara_oblast).png|80 px]]
+| знамѧ= Flag_of_Samara_(Samara_oblast).png
+| знакъ = Coat_of_Arms_of_Samara_(Samara_oblast).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1133 тысѫщи
