*Empty MediaWiki Message*

--- a/Оуфа.mw
+++ b/Оуфа.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Ѹфа
+{{Градъ|Имѧ = Ѹфа
 | знамѧ= 
-| знакъ = [[Видъ:Ufa_gerb.gif|80 px]]
+| знакъ = Ufa_gerb.gif
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1029 тысѫщь
 | Основанъ = 1586
-| map = 
+| Харта = 
 |}}
 '''Ѹфа''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Уфа'', [[башкортьскъ ѩзыкъ|башкортьскы]] ''Өфө'') градъ [[Рѡсї|Рѡсїѩ]], [[Башкортостанъ|Башкортостанѹ]] димократїѩ главьнъ градъ ѥстъ. Людии обитаѥтъ 1029 тысѫщь. Основанъ лѣта 1574, нареченъ градъ съ лѣта 1586 ѥстъ. Ѹфа построѥна сълинии рѣкъ [[Бѣла (рѣка)|Бѣлыѩ]], [[Диома (рѣка)|Диомы]], и [[Ѹфа (рѣка)|Ѹфы]] ѥстъ. Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
 
