*Empty MediaWiki Message*

--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -1,6 +1,6 @@
-{{Градъ|name = Челѣбиньскъ
-| знамѧ= [[Видъ:Flag_of_Chelyabinsk.png|100 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Chelyabinsk_(2000).png|80 px]]
+{{Градъ|Имѧ = Челѣбиньскъ
+| знамѧ= Flag_of_Chelyabinsk.png
+| знакъ = Coat_of_Arms_of_Chelyabinsk_(2000).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1093 тысѫщѧ
