--- a/Єкатєрїнбоургъ.mw
+++ b/Єкатєрїнбоургъ.mw
@@ -1,4 +1,4 @@
-{{Градъ|name =Екатерїнбѹргъ
+{{Градъ|Имѧ =Екатерїнбѹргъ
 | знамѧ= 
 | знакъ = Coat_of_Arms_of_Yekaterinburg_(Sverdlovsk_oblast)_(1998).png
 | Дрьжава = Рѡсї
