*Empty MediaWiki Message*

--- a/Виньница_·_Макєдонїи.mw
+++ b/Виньница_·_Макєдонїи.mw
@@ -1,13 +1,13 @@
-{{Градъ|name = Виньница
+{{Градъ|Имѧ = Виньница
 | знамѧ= 
 | знакъ = 
 | Дрьжава = Македонї
 | Глава = 
-| Людии = 
+| Людии = 14 200
 | Основанъ = 
-| map = 
+| Харта = 
 }}
-'''Виньница''' ѥстъ градъ [[Македонї|Македонїѩ]]. 
+'''Виньница''' ѥстъ градъ [[Македонї|Македонїѩ]]. Дьньсь Виньницѣ людии 14 тысѧщь обитаѥтъ
 [[Category:Гради]]
 [[Катигорї:Македонї]]
 
