*Empty MediaWiki Message*

--- a/Сараѥво.mw
+++ b/Сараѥво.mw
@@ -1,13 +1,13 @@
-{{Градъ|name = Сараѥво
-| знамѧ= [[Видъ:SarajevoFlag.gif|100 px]]
-| знакъ = [[Видъ:Herbik.svg|80 px]]
+{{Градъ|Имѧ = Сараѥво
+| знамѧ= SarajevoFlag.gif
+| знакъ = Herbik.svg
 | Дрьжава = Босна
 | Глава = 
-| Людии =  802 тысѫщи
+| Людии =  802 тысѧщи
 | Основанъ = 
-| map =[[Видъ:Location Sarajevo.png|200 px]]
+| Харта =[[Видъ:Location Sarajevo.png|200 px]]
 |}}
-'''Сараѥво''' ([[босньскъ ѩзыкъ|босньскы]] ''Sarajevo'') стольнъ градъ [[Босна|Босны]] ѥсть, ѥѩ наибол҄ии градъ ѥсть. Основанъ лѣта 1263 ѥстъ. Града имена Врьхъ Босна (''Босноваръ''), Босна-Сараи, Сараи-Ова бѣахѫ. Въ Сараѥвѣ людии 802 тысѧщи обитаѥтъ.
+'''Сараѥво''' ([[босньскъ ѩзыкъ|босньскы]] ''Sarajevo'') стольнъ градъ [[Босна|Босны]] ѥсть, ѥѩ наибол҄ии градъ ѥсть. Основанъ лѣта 1263 ѥстъ. Града имена Врьхъ Босна (''Босноваръ''), Босна-Сараи, Сараи-Ова бѣахѫ. Сараѥвѣ людии 802 тысѧщи обитаѥтъ.
 
 [[Category:Стольни гради]]
 [[Катигорї:Босна]]
