*Empty MediaWiki Message*

--- a/Гъданьскъ.mw
+++ b/Гъданьскъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Гъданьскъ
-| знамѧ= [[Видъ:Gdansk flag.svg|100 px]]
-| знакъ = [[Видъ:POL Gdańsk COA.svg|80 px]]
+{{Градъ|Имѧ = Гъданьскъ
+| знамѧ= Gdansk flag.svg
+| знакъ = POL Gdańsk COA.svg
 | Дрьжава = Пол̑ьска
 | Глава = 
 | Людии = 
 | Основанъ = 
-| map = [[Видъ:POL Gdańsk map.svg|200 px]]
+| Харта = [[Видъ:POL Gdańsk map.svg|200 px]]
 |}}
 '''Гъданьскъ''' ({{Lang-pl|Gdańsk}}) [[Пол̑ьска|Пол̑ьскы]] сѣвера [[градъ]] ѥстъ.
 
