--- a/Каꙁанъ.mw
+++ b/Каꙁанъ.mw
@@ -1,4 +1,4 @@
-{{Градъ|name = Казань
+{{Градъ|Имѧ = Казань
 | знамѧ= Zilant.GIF
 | знакъ = Coat_of_Arms_of_Kazan_(Tatarstan)_(2004).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
