*Empty MediaWiki Message*

--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Загребъ
+{{Градъ|Имѧ = Загребъ
 | знамѧ= Zagreb zastava.gif
 | знакъ = Zagreb coa.gif
 | Дрьжава = Хръватьска
 | Глава = Миланъ Бандищь
 | Людии = 779145
 | Основанъ = 1094
-| map = [[Видъ:CroatiaGradZagreb.png]]
+| Харта = [[Видъ:CroatiaGradZagreb.png]]
 |}}
 '''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') [[Хръватьска|Хръватьскы]] стольнъ градъ ѥсть. Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥсть. Загребъ основанъ ѥсть 1094, градъ съ лѣта 1242 ѥсть. Града имѧ Градьцъ бѣаше.
 [[Category:Гради]]
