*Empty MediaWiki Message*

--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Санкт-Петербѹргъ
+{{Градъ|Имѧ = Санкт-Петербѹргъ
 | знамѧ= Flag of St Petersburg (Russia).png
 | знакъ = Coat of Arms of Saint Petersburg large (2003).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 4500 тысѫщь
 | Основанъ = 1703
-| map = 
+| Харта = 
 |}}
 
 '''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}}) основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] стольнъ градъ междѹ 1712—1918 годы бѣаше. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]]. Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣаше. Главьнъ градъ [[Лениноградьска область|Лениноградьскы]] области и градъ-ирѡи ѥстъ.
