*Empty MediaWiki Message*

--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Ѹлиновьскъ
-| знамѧ= [[Видъ:Flag_of_Ulyanovsk.svg|120 px]]
-| знакъ = [[Видъ:Coat_of_Arms_of_Ulianovsk_(2003).png|80 px]]
-| Дрьжава = Рѡсї
+{{Градъ|Имѧ = Ѹлиновьскъ
+| знамѧ= Flag_of_Ulyanovsk.svg
+| знакъ = Coat_of_Arms_of_Ulianovsk_(2003).png
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 623 тысѫщь
 | Основанъ = 1648
-| map = [[Видъ:Ulyanovsk in Ulyanovsk Oblast.png|290 px]]
+| Харта = Ulyanovsk in Ulyanovsk Oblast.png
 |}}
 
 '''Ѹлиновьскъ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ульяновск'') [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 623 тысѫщь. Градъ построѥнъ рѣкахъ [[Вльга|Вльѕѣ]] и [[Свига|Свиѕѣ]] ѥстъ. [[Ѹлиновьска область|Ѹлиновьскы]] области главьнъ градъ ѥстъ. Основанъ лѣта 1648 ѥстъ [[Богъданъ Хытрово|Богъданомь Хытровомь]]. Града имѧ до лѣта 1924 Симбирьскъ, а до лѣта 1780 Синбирьскъ бѣаше. Нынѣ [[Владимѣръ Ленинъ|Владимѣра Ѹлинова-Ленина]] именьмь зовомыи ѥстъ.
