*Empty MediaWiki Message*

--- a/Новосибирьскъ.mw
+++ b/Новосибирьскъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name =  Новосибирьскъ
+{{Градъ|Имѧ =  Новосибирьскъ
 | знамѧ= Novosibirsk-city flag.svg
 | знакъ = Coat_of_Arms_of_Novosibirsk_(2004).png
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 
 | Основанъ = 
-| map = [[Видъ:RussiaNovosibirskCity.png|200 px]]
+| Харта = [[Видъ:RussiaNovosibirskCity.png|200 px]]
 }}
 '''Новосибирьскъ''' ({{Lang-ru|Новосибирск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Новосибирьскъ наиболии градъ [[Сибирь|Сибири]] ѥсть. Главьнъ градъ [[Новосибирьска область|Новосибирьскы]] области ѥстъ.
 Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
