*Empty MediaWiki Message*

--- a/Софїꙗ.mw
+++ b/Софїꙗ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Софї
+{{Градъ|Имѧ = Софї
 | знамѧ= BG Sofia flag.svg
 | знакъ = BG Sofia coa.svg
 | Дрьжава = Блъгарї
 | Глава = 
 | Людии = 
 | Основанъ = 
-| map = 
+| Харта = 
 |}}
 '''Со́фї''' ([[блъгарьскъ ѩзыкъ|блъгарьскы]] "София") стольнъ градъ [[Блъгарї|Блъгарїѩ]] ѥсть.
 
