*Empty MediaWiki Message*

--- a/Люблꙗна.mw
+++ b/Люблꙗна.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Люблна
+{{Градъ|Имѧ = Люблна
 | знамѧ= 
 | знакъ = Знакъ Люблньскъ.png
 | Дрьжава = Їллѷрїиска Словѣнї
 | Глава = 
 | Людии = 
 | Основанъ = 1144
-| map = [[Видъ:Karte Ljubljana si.png|200 px]]
+| Харта = [[Видъ:Karte Ljubljana si.png|200 px]]
 |}}
 '''Люблна''' стольнъ градъ [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] ѥсть. Люблна построѥна ѥстъ рѣцѣ [[Люблѩнїца(рѣка)|Люблницѣ]] лѣта 1144.
 
