*Empty MediaWiki Message*

--- a/Вльгоградъ.mw
+++ b/Вльгоградъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Вльгоградъ
+{{Градъ|Имѧ = Вльгоградъ
 | знамѧ= Volgograd flag.gif
 | знакъ = Coat of Arms of Volgograd.png
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 
 | Основанъ = 1589
-| map =
+| Харта =
 |}}
 '''Вльгоградъ''' ({{Lang-ru|Волгоград}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Срьдьце Вльгоградьскы области ѥстъ. Назъваныи рѣкы [[Вльга|Вльгы]] именьмь ѥиже сѧ мѣстити. Рѡсїѩ наидльжаии градъ о сѣвера къ югѹ.
 
