*Empty MediaWiki Message*

--- a/Мѣнскъ.mw
+++ b/Мѣнскъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Мѣньскъ
+{{Градъ|Имѧ = Мѣньскъ
 | знамѧ= 
-| знакъ = [[Видъ:Coat of Arms of Minsk, Belarus.png|80 px]]
+| знакъ = Coat of Arms of Minsk, Belarus.png
 | Дрьжава = Бѣла Рѹсь
 | Глава = Михаилъ Павловъ
 | Людии =  
 | Основанъ = 1067
-| map = [[Видъ:Minsk-pos.jpg|200 px]]
+| Харта = [[Видъ:Minsk-pos.jpg|200 px]]
 |}}
 '''Мѣньскъ''' ({{Lang-be|Мінск, Менск}}, {{Lang-ru|Минск}}) стольнъ градъ [[Бѣла Рѹсь|Бѣлы Рѹси]] ѥстъ. Глава Мѣньска [[Михаилъ Павловъ]] ѥстъ. Мѣньскъ градъ-ирѡи ѥстъ. На рѣцѣ [[Свислочь (рѣка)|Свислочи]] построѥнъ ѥстъ, помѣновенъ же запрьва лѣтописи лѣта 1067 ѥстъ.
 
