*Empty MediaWiki Message*

--- a/Цєтиниѥ.mw
+++ b/Цєтиниѥ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Цетиниѥ
+{{Градъ|Имѧ = Цетиниѥ
 | знамѧ=
 | знакъ = 
 | Дрьжава = Чрьна Гора
 | Глава = 
 | Людии = 15 тысѧщь
 | Основанъ = 1482
-| map = [[Видъ:Cetinje-Position.PNG|200 px]]
+| Харта = [[Видъ:Cetinje-Position.PNG|200 px]]
 |}}
 '''Цетиниѥ''' ([[Срьбьскъ ѩзыкъ|срьбскы]] ''Цетиње/Cetinje'') [[Чрьна Гора|Чрьны Горы]] древльн҄ь стольнъ градъ  ѥстъ. Людии обитаѥтъ 15 тысѧщь. Построѥнъ ѥстъ ѹ горы срьбьскы нарицаѥмы [[Ловћенъ]] лѣта 1482.
 
