*Empty MediaWiki Message*

--- a/Варшава.mw
+++ b/Варшава.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Варшава
-| знамѧ= [[Видъ:Flag of Warsaw.svg|100 px]]
-| знакъ = [[Видъ:Grand CoA Warsaw.png|80 px]]
+{{Градъ|Имѧ = Варшава
+| знамѧ= Flag of Warsaw.svg
+| знакъ = Grand CoA Warsaw.png
 | Дрьжава = Пол̑ьска
 | Глава = 
 | Людии = 
 | Основанъ = 
-| map = [[Видъ:POL Warszawa map.svg|200 px]]
+| Харта = [[Видъ:POL Warszawa map.svg|200 px]]
 |}}
 
 '''Варшава''' ({{Lang-pl|Warszawa}}) [[стольнъ градъ]] [[Пол̑ьска|Пол̑ьскы]] ѥстъ.
