--- a/Ѳєссалонїка.mw
+++ b/Ѳєссалонїка.mw
@@ -1,14 +1,15 @@
-{{Градъ|name = Ѳессалонїка
+{{Градъ|Имѧ = Ѳессалонїка
 | знамѧ= Thessaloniki Municipal Flag.png
 | знакъ = 
 | Дрьжава = Грьци
 | Глава = 
 | Людии = 
 | Основанъ = 
-| map = [[Видъ:Thessaloniki.png|200 px]]
+| Харта = [[Видъ:Thessaloniki.png|200 px]]
 |}}
+[[Image:Salonica White Tower.jpg|thumb|left|250px|Бѣла Вѣжа Ѳессалонїцѣ, града сѷмволъ]]
 '''Ѳессалонка''', (древльнѥсловѣньскы ''Солѹнь'' или ''Селѹнь''. [[Грьчьскъ ѩзыкъ|грьчьскы]]: Θεσσαλονίκη), [[Грьци|Грьцѣхъ]] ([[Македонї]]) градъ ѥстъ, иде црькы христианьска была бѣ, ѥиже апостолъ [[Паѵлъ апостолъ|Паѵлъ]] посъланиѥ писа. И Ѳессалонїкы свѧта братри, [[Кѷрїллъ]] и [[Меѳодiи]] ѥсте, же [[Словѣньска азъбѹкы|Азъбѹкъвь]] словѣномъ измыслисте и хрїстїаньскы кънигы на [[Словѣньскъ ѩзыкъ|словѣньскыи ѩзыкъ]] прѣложисте.
-[[Image:Salonica White Tower.jpg|thumb|right|250px|Бѣла Вѣжа Ѳессалонїцѣ, града сѷмволъ]]
+
 [[Катигорї:All orphaned pages]]
 [[Катигорї:Гради]]
 [[Катигорї:Грьци]]
