*Empty MediaWiki Message*

--- a/Кꙑѥвъ.mw
+++ b/Кꙑѥвъ.mw
@@ -1,14 +1,14 @@
-{{Градъ|name = Кыѥвъ
+{{Градъ|Имѧ = Кыѥвъ
 | знамѧ= Kyiv flag.png
 | знакъ = Kiew-city-COA.PNG
 | Дрьжава = Ѹкраина
 | Глава = 
 | Людии = 
 | Основанъ = 
-| map = 
+| Харта = 
 |}}
 
-[[Image:Andriyivskyy Uzviz.jpeg|thumb|right|Възвозъ апостола Андреѩ Кыѥвѣ]]
+[[Image:Andriyivskyy Uzviz.jpeg|thumb|left|Възвозъ апостола Андреѩ Кыѥвѣ]]
 '''Кыѥвъ''' ({{lang-uk|Київ}}) градъ ѥстъ [[Дънѣпръ|Дънѣпрѣ]], стольнъ градъ [[Ѹкраина|Ѹкраины]].
 
 Кыѥвъ древлѥ бѣаше стольнъ градъ [[Рѹсь|Рѹси]].
