*Empty MediaWiki Message*

--- a/Новъ_Градъ.mw
+++ b/Новъ_Градъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Новъ Градъ
+{{Градъ|Имѧ = Новъ Градъ
 | знамѧ= Flag of Veliky Novgorod.png
 | знакъ = Coat of Arms of Veliky Novgorod.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии =
 | Основанъ = 
-| map = 
+| Харта = 
 |}}
 [[Image:Cathedral of St. Sophia, the Holy Wisdom of God in Novgorod, Russia.jpg|thumb|left|Свѧтыѩ Божѧѩ Софїѩ (Мѫдрости) Новѣ Градѣ съборьна црькы]]
 '''Новъ Градъ''' ({{Lang-ru|Новгород}}, епїсимьно наречениѥ '''Великыи Новъ Градъ''', рѹсьскы ''Великий Новгород'') [[Рѡсї|Рѡсїи]] [[Волховъ|Волховѣ]] рѣцѣ стоитъ.
