*Empty MediaWiki Message*

--- a/Римъ.mw
+++ b/Римъ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Римъ
+{{Градъ|Имѧ = Римъ
 | знамѧ= Flag of Rome.svg
 | знакъ = Roma-Stemma.png
 | Дрьжава = Италї
 | Глава = 
 | Людии =  
 | Основанъ = 
-| map =
+| Харта =
 |}}
 '''Римъ''' ({{lang-la|Roma}}) ѥстъ великъ градъ южьштѣи [[Еѵрѡпа|Еѵрѡпѣ]], стольнъ градъ [[Италї|Италїѩ]].
 
