*Empty MediaWiki Message*

--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Съкопиѥ
+{{Градъ|Имѧ = Съкопиѥ
 | знамѧ= ZNAME Skopje.jpg
 | знакъ = 
 | Дрьжава = Македонї
 | Глава = 
 | Людии = 1110 тысѧщь
 | Основанъ = 1005
-| map = 
+| Харта = 
 }}
 '''Съкопиѥ''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Скопје'') градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ.
 
