*Empty MediaWiki Message*

--- a/Бѣлъ_Градъ_·_Срьбїи.mw
+++ b/Бѣлъ_Градъ_·_Срьбїи.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Бѣлъ Градъ
+{{Градъ|Имѧ = Бѣлъ Градъ
 | знамѧ= Flag of Belgrade.png
 | знакъ = Small Coat of Arms Belgrade.svg
 | Дрьжава = Срьбїıа
 | Глава = 
 | Людии =  1 795 124 
 | Основанъ =Г  векъ до РХ
-| map =
+| Харта =
 }}
 '''Бѣлъ Градъ''' или '''Бѣлъградъ''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Београд'') [[стольнъ градъ]] [[Срьбї|Срьбїѩ]] ѥстъ.
 
