--- a/Рѣꙁан҄ь.mw
+++ b/Рѣꙁан҄ь.mw
@@ -1,4 +1,4 @@
-{{Градъ|name = Рѧзань
+{{Градъ|Имѧ = Рѧзань
 | знамѧ= Flag_of_Ryazan_(Ryazan_oblast).png
 | знакъ = Coat_of_Arms_of_Ryazan_small.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
