--- a/Бѣлъ_Градъ_·_Срьбїи.mw
+++ b/Бѣлъ_Градъ_·_Срьбїи.mw
@@ -7,7 +7,7 @@
 | Основанъ =Г  векъ до РХ
 | Харта =
 }}
-'''Бѣлъ Градъ''' или '''Бѣлъградъ''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Београд'') [[стольнъ градъ]] [[Срьбї|Срьбїѩ]] ѥстъ.
+'''Бѣлъ Градъ''' или '''Бѣлоградъ''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Београд'') [[Срьбї|Срьбїѩ]] [[стольнъ градъ]]  ѥстъ.
 
 [[Category:Гради]]
 [[Category:Срьбї]]
