Безобразьнѫ блазнѫ исправихъ.

--- a/Бѣлъ_Градъ_·_Срьбїи.mw
+++ b/Бѣлъ_Градъ_·_Срьбїи.mw
@@ -4,7 +4,7 @@
 | Дрьжава = Срьбїıа
 | Глава = 
 | Людии =  1 795 124 
-| Основанъ =Г  векъ до РХ
+| Основанъ =Г  вѣкъ до РХ
 | Харта =
 }}
 '''Бѣлъ Градъ''' или '''Бѣлоградъ''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Београд'') [[Срьбї|Срьбїѩ]] [[стольнъ градъ]]  ѥстъ.
