Искѹшениѥ мъногосъмысли страницѫ сътворити.

--- a/Бѣлъ_Градъ.mw
+++ b/Бѣлъ_Градъ.mw
@@ -1,1 +1,7 @@
-#REDIRECT [[Бѣлъ Градъ (Срьбїи)]]
+{{Образьць:Мъногосъмыслиѥ}}
+----
+Виждь:
+<br>
+[[Бѣлъ Градъ (Срьбїи)|Бѣлоградъ]] иже Срьбїи ѥстъ.
+<br>
+[[Бѣлоградъ (Рѡсїи)|Бѣлоградъ]] иже Рѡсїи ѥстъ.
