Статї дъводѹшьна ѥстъ.

--- a/Гѷмєнджє.mw
+++ b/Гѷмєнджє.mw
@@ -1,2 +1,2 @@
-'''Гѹменџа''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Гѷмендже''' ([[Македоньскъ ѩзыкъ|македоньскы]] ''Гуменджа'') [[Македонїıа|Македонїѩ]] село ѥстъ.
 [[Category:Гради]]
