Своѭ блазнѫ исправихъ.

--- a/Гѷмєнджє.mw
+++ b/Гѷмєнджє.mw
@@ -1,2 +1,2 @@
-'''Гѷмендже''' ([[Македоньскъ ѩзыкъ|македоньскы]] ''Гуменджа'') [[Македонїıа|Македонїѩ]] село ѥстъ.
+'''Гѷмендже''' ([[Македоньскъ ѩзыкъ|македоньскы]] ''Гуменџа'') [[Македонїıа|Македонїѩ]] село ѥстъ.
 [[Category:Гради]]
