--- a/Бѣлъ_Градъ_·_Срьбїи.mw
+++ b/Бѣлъ_Градъ_·_Срьбїи.mw
@@ -7,6 +7,7 @@
 | Основанъ =Г  вѣкъ до РХ
 | Харта =
 }}
+{{Дрѹѕи съмысли|Бѣлъ Градъ}}
 '''Бѣлъ Градъ''' или '''Бѣлоградъ''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Београд'') [[Срьбї|Срьбїѩ]] [[стольнъ градъ]]  ѥстъ.
 
 [[Category:Гради]]
